--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <a href="blog.html">TIL</a>
                 <a href="https://www.instagram.com/iizuuull_">Instagram</a>
                 <a href="mailto:ahmadzulpiqor@mail.ugm.ac.id">Contact</a>
+                <button class="theme-toggle" id="theme-toggle" title="Ganti Tema">💡</button>
             </nav>
             <h1>Ahmad Zulpiqor</h1>
         </header>
