--- a/index.html
+++ b/index.html
@@ -116,5 +116,22 @@
             © 2026 Ahmad Zulpiqor. Built with simplicity.
         </footer>
     </div>
+    <script>
+    const btn = document.getElementById('theme-toggle');
+    const theme = localStorage.getItem('theme') || 'light';
+
+    // Set tema saat halaman pertama dibuka
+    document.documentElement.setAttribute('data-theme', theme);
+    btn.textContent = theme === 'dark' ? '☀️' : '💡';
+
+    btn.addEventListener('click', () => {
+        let currentTheme = document.documentElement.getAttribute('data-theme');
+        let newTheme = currentTheme === 'light' ? 'dark' : 'light';
+
+        document.documentElement.setAttribute('data-theme', newTheme);
+        localStorage.setItem('theme', newTheme);
+        btn.textContent = newTheme === 'dark' ? '☀️' : '💡';
+    });
+</script>
 </body>
 </html>
