--- a/index.html
+++ b/index.html
@@ -5,122 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmad Zulpiqor</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        /* Reset Dasar */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, sans-serif;
-            background-color: #ffffff;
-            color: #111827;
-            line-height: 1.7;
-        }
-
-        /* Container: Jarak atas kecil agar nama naik */
-        .container {
-            max-width: 650px;
-            margin: 0 auto;
-            padding: 20px 20px;
-        }
-
-        header {
-            margin-bottom: 20px;
-        }
-
-        /* Navigasi: Pindah ke pojok KANAN */
-        nav {
-            display: flex;
-            justify-content: flex-end; /* Menggeser ikon ke kanan */
-            align-items: center;
-            position: relative;
-            margin-bottom: 10px;
-        }
-
-        .hamburger {
-            display: block;
-            font-size: 26px;
-            cursor: pointer;
-            color: #111827;
-            padding: 5px 0;
-        }
-
-        #menu-toggle { display: none; }
-
-        /* Menu Dropdown: Muncul dari KANAN */
-        .menu {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            top: 40px;
-            right: 0; /* Menempel di sisi kanan */
-            left: auto; /* Mematikan setting kiri sebelumnya */
-            width: 200px;
-            background: white;
-            padding: 20px;
-            border: 1px solid #f3f4f6;
-            z-index: 100;
-            list-style: none;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-        }
-
-        #menu-toggle:checked ~ .menu {
-            display: flex;
-        }
-
-        .menu li { margin-bottom: 12px; }
-        .menu a {
-            text-decoration: none;
-            color: #6b7280;
-            font-size: 16px;
-            transition: color 0.2s;
-        }
-
-        .menu a:hover { color: #111827; }
-
-        /* Judul: Tetap di tengah, jarak ke bio pas */
-        h1 {
-            font-size: 32px;
-            font-weight: 700;
-            margin-top: 0;
-            margin-bottom: 40px;
-            text-align: center;
-            letter-spacing: -0.02em;
-        }
-
-        /* Bio */
-        .bio {
-            font-size: 16px;
-            color: #4b5563;
-            text-align: justify;
-            text-justify: inter-word;
-        }
-
-        .bio p {
-            margin-bottom: 20px;
-        }
-
-        .highlight {
-            color: #111827;
-            font-weight: 500;
-        }
-
-        footer {
-            margin-top: 60px;
-            padding: 20px 0;
-            border-top: 1px solid #f3f4f6;
-            font-size: 13px;
-            color: #9ca3af;
-            text-align: center;
-        }
-
-        @media (max-width: 480px) {
-            h1 { font-size: 28px; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
