--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Today I Learned</a></li>
                     <li><a href="https://www.instagram.com/iizuuull_">Instagram</a></li>
+                    <li><a href="index.html">Linkedin</a></li>
                     <li><a href="mailto:ahmadzulpiqor@mail.ugm.ac.id">Contact</a></li>
                 </ul>
             </nav>
