--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Today I Learned</a></li>
                     <li><a href="https://www.instagram.com/iizuuull_">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/in/username-kamu" target="_blank">LinkedIn</a></li>
                     <li><a href="mailto:ahmadzulpiqor@mail.ugm.ac.id">Contact</a></li>
                 </ul>
             </nav>
