--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <header class="home-header">
             <nav>
                 <button id="theme-toggle" title="Ubah Tema">🌙</button>
-                
                 <div class="hamburger" id="hamburger">☰</div>
-
                 <ul class="menu" id="menu">
                     <li><a href="index.html">About</a></li>
                     <li><a href="blog.html">Today I Learned</a></li>
@@ -54,14 +52,12 @@
         const menu = document.getElementById('menu');
         const themeToggle = document.getElementById('theme-toggle');
 
-        // 1. Logika Buka-Tutup Menu (Fix untuk HP)
         hamburger.addEventListener('click', (e) => {
-            e.stopPropagation(); // Mencegah klik 'tembus' ke latar belakang agar menu tidak langsung tutup
+            e.stopPropagation();
             menu.classList.toggle('active');
             hamburger.innerHTML = menu.classList.contains('active') ? '✕' : '☰';
         });
 
-        // 2. Menutup menu jika klik di mana saja di luar area menu
         document.addEventListener('click', (e) => {
             if (!menu.contains(e.target) && !hamburger.contains(e.target)) {
                 menu.classList.remove('active');
@@ -69,7 +65,6 @@
             }
         });
 
-        // 3. Logika Mode Gelap
         themeToggle.addEventListener('click', () => {
             const currentTheme = document.documentElement.getAttribute('data-theme');
             if (currentTheme === 'dark') {
@@ -83,7 +78,6 @@
             }
         });
 
-        // 4. Memuat tema yang tersimpan
         const savedTheme = localStorage.getItem('theme');
         if (savedTheme === 'dark') {
             document.documentElement.setAttribute('data-theme', 'dark');
