--- a/blog.html
+++ b/blog.html
@@ -58,8 +58,8 @@
                     <li><a href="mailto:ahmadzulpiqor@mail.ugm.ac.id">Contact</a></li>
                 </ul>
             </nav>
-            <h1 id="page-title">Today</h1>
-        </header>
+            <h1 id="page-title">Today I Learned</h1>
+        </header> 
 
         <div id="tag-header">
             <span class="back-link-tag" id="reset-filter">← Back to all posts</span>
